# corpus-core

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
src/corpus_core/: README.md  __init__.py  archive.py  chunker.py  corpus_index.py  embeddings.py  http_fetch.py  jobs.py  mcp_scaffold.py  pdf.py  proxy.py  reranker.py  search.py
tests/: conftest.py  test_archive.py  test_chunker.py  test_embeddings.py  test_group_a_fixes.py  test_http_fetch.py  test_jobs.py  test_mcp_scaffold.py  test_new_fixes.py  test_pdf.py  test_proxy.py  test_reranker.py  test_search.py  test_smoke.py
