[project]
name = "corpus-core"
version = "0.1.1"
description = "Shared infrastructure for corpus indexing + MCP search (used by arxiv-radar-mcp + lab-corpus-mcp)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Igor Morozov", email = "igor@exopoiesis.space" }
]
keywords = ["mcp", "embeddings", "semantic-search", "rag", "corpus"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Indexing",
]

# Core dependencies — what every corpus_core import path needs at runtime.
# Heavy ML stacks (sentence-transformers, torch, mcp SDK, uvicorn, starlette)
# are loaded lazily inside the relevant functions, but they're declared here
# because production deployments WILL hit those code paths.
dependencies = [
    "numpy>=1.26",
    "sentence-transformers>=3.0",
    "anyio>=4.0",
    "httpx>=0.27",
    "mcp>=1.0",
    "starlette>=0.40",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/exopoiesis/corpus-core"
Issues = "https://github.com/exopoiesis/corpus-core/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/corpus_core"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
